--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
         <div class="flex-row">
             <h2 class="section-title">My Work</h2>
             <div class="flex-container">
-                <div class="flex-item">
-                    <span>Card Title</span>
+                <div class="flex-item" id="image1">
+                    <a href="https://team4project1.github.io/Bored/"><span class="project-name">Bored!</span></a>
                 </div>
-                <div class="flex-item">
+                <div class="flex-item" id="image2">
                     <span>Card 2</span>
                 </div>
-                <div class="flex-item">
+                <div class="flex-item" id="image3">
                     <span>Card 3</span>
                 </div>
-                <div class="flex-item">
+                <div class="flex-item" id="image4">
                     <span>Card 4</span>
                 </div>
             </div>
