--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="https://team4project1.github.io/Bored/"><span class="project-name">Bored!</span></a>
                 </div>
                 <div class="flex-item" id="image2">
-                    <span>Card 2</span>
+                    <a href="https://online-therapy-44444.herokuapp.com/"><span class="project-name">Online Therapy</span></a>
                 </div>
                 <div class="flex-item" id="image3">
                     <span>Card 3</span>
